@@ -36,20 +36,24 @@
 		<p>The NPDS development team has been assigned an official port number by <a href="http://www.iana.org/assignments/port-numbers">IANA</a> for NPDS Tracker servers. The port to be used going forward is 3680. It is recommended that you update your <a href="/modules/#trackerclient">Tracker Client</a> settings to use this port number, as old port numbers will be phased out.</p>
 	
 		<h2 id="list">Tracker Server List</h2>
-		<p>This is a list of Tracker Servers currently being operated and maintained by the NPDS commmunity.</p>
+		<p>This is a list of tracker servers currently being operated and maintained by the NPDS commmunity.</p>
 		<p>If you would like to operate your own tracker server, please let us know.</p>
 	
 		<ul>
+			<li><strong>Unna</strong> operated by Morgan Aldridge<br />
+			<a href="http://unna.org:3680/">http://unna.org:3680/</a><br />&nbsp;<br /></li>
+			<li><strong>Newtzilla</strong> operated by Ron Parker<br />
+			<a href="http://newtzilla.quadzilla.net:3680/">http://newtzilla.quadzilla.net:3680/</a><br />&nbsp;<br /></li>
 			<li><strong>Misato</strong> operated by Victor Rehorst<br />
 			<a href="http://misato.chuma.org:3680/">http://misato.chuma.org:3680/</a><br />
 			<a href="http://misato.chuma.org:8080/">http://misato.chuma.org:8080/</a> (Use if behind a firewall)<br />
 			<a href="http://chuma.is-a-geek.org:3680/">http://chuma.is-a-geek.org:3680/</a><br />
 			<a href="http://chuma.is-a-geek.org:8080/">http://chuma.is-a-geek.org:8080/</a> (Use if behind a firewall)<br />&nbsp;<br /></li>
+			<li><strong>Tek-Ed</strong> operated by Ed Kummel<br />
+			<a href="http://newton.tek-ed.com:3680/">http://newton.tek-ed.com:3680/</a></li>
+			<!--
 			<li><strong>Newtontracker</strong> operated by David Schultz<br />
 			<a href="http://newtontracker.no-ip.org:3680/">http://newtontracker.no-ip.net:3680/</a><br />&nbsp;<br /></li>
-			<li><strong>Tek-Ed</strong> operated by Ed Kummel<br />
-			<a href="http://newton.tek-ed.com:3680/">http://newton.tek-ed.com:3680/</a><br />&nbsp;<br /></li>
-			<!--
 			<li><strong>Continuity</strong> operated by Paul Guyot and hosted by Bill Shamam<br />&nbsp;<br />
 			<a href="http://npds-tracker.continuity.cx:3680/">http://npds-tracker.continuity.cx:3680/</a><br />
 			<a href="http://npds-tracker.continuity.cx:8080/">http://npds-tracker.continuity.cx:8080/</a> (Use if behind a firewall)</li>
